--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Address book</h1>
 
       <div class="row">
+
         <div class="col-md-6">
           <h2>Add a contact:</h2>
           <form id="new-contact">
@@ -40,20 +41,30 @@
                 </div>
               </div>
             </div>
+
             <span class="btn btn-primary" id="add-address">Another address</span>
+
             <button type="submit" class="btn">Add</button>
           </form>
+
           <h2>Contacts:</h2>
           <ul id="contacts">
+
           </ul>
         </div>
+
         <div class="col-md-6">
           <div id="show-contact">
             <h2></h2>
             <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
+            <p>Addresses:</p>
+            <ul id="addresses">
+
+            </ul>
           </div>
         </div>
+
       </div>
     </div>
   </body>
